kubernetes/apps/tools/searxng/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: searxng-envoy
  annotations:
    homepage.shamubernetes.com/enabled: "true"
    homepage.shamubernetes.com/name: "SearXNG"
    homepage.shamubernetes.com/description: "Private metasearch"
    homepage.shamubernetes.com/group: "Tools"
    homepage.shamubernetes.com/order: "40"
    homepage.shamubernetes.com/favorite: "false"
    homepage.shamubernetes.com/icon: "dashboard-icons:searxng"
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "searxng.${HOME_DOMAIN}"
  rules:
  - backendRefs:
    - name: searxng
      port: 8080
